--- a/yt1/src/index.html
+++ b/yt1/src/index.html
@@ -15,7 +15,102 @@
   </head>
   <body>
     <div class="container">
-      test
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a href="#" class="navbar-brand">CompanyName</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">Products</a>
+              <div class="dropdown-menu">
+                <a href="#" class="dropdown-item">Product 1</a>
+                <a href="#" class="dropdown-item">Product 1</a>
+                <div class="dropdown-divider"></div>
+                <a href="#" class="dropdown-item">Product 1</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="jumbotron">
+        <h1 class="display-4">Simple. Elegant. Awesome</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum inventore id exercitationem illo magnam dolore laudantium velit accusantium natus culpa.</p>
+
+        <p class="lead">
+          <a href="#" class="btn btn-primary btn-lg" role="button">Learn More</a>
+        </p>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 col-md-4">
+          <div class="card mb-4">
+            <div class="card-body text-center">
+              <h5 class="card-title">Card Title</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, minima!</p>
+              <a href="#" class="card-link">Link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body text-center">
+              <h5 class="card-title">Card Title</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, minima!</p>
+              <a href="#" class="card-link">Link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body text-center">
+              <h5 class="card-title">Card Title</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, minima!</p>
+              <a href="#" class="card-link">Link</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-sm-4 mt-md-0">
+        <div class="col-sm-12 col-md-8 text-sm-center text-md-left">
+          <h3>An important heading</h3>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, ipsa.</p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus placeat, odio non similique vel quas officia accusamus rem, soluta at perspiciatis labore incidunt ad praesentium ullam laudantium deserunt dolorum adipisci.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat maxime praesentium aperiam, accusamus quisquam repellat dignissimos facere deserunt error, distinctio blanditiis porro optio illo, perferendis quidem rem corporis, sunt. Reiciendis.</p>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <h3 class="mb-4">Secondary menu</h3>
+          <ul class="nav flex-column nav-pills">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Active</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Link</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Link</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
